[gd_scene load_steps=21 format=3 uid="uid://bd7oh1txs0g26"]

[ext_resource type="Script" uid="uid://b6aqtdciftwe7" path="res://levels/game_board.gd" id="1_xgw2e"]
[ext_resource type="Script" uid="uid://bt88jtvvciac4" path="res://levels/level_data.gd" id="2_e5fk4"]
[ext_resource type="TileSet" uid="uid://c0l3s2myehx8h" path="res://images/shadow-block-1.tres" id="2_onlo0"]
[ext_resource type="Script" uid="uid://dw13duhls62rj" path="res://shapes/polyomino_shape.gd" id="3_67wtr"]
[ext_resource type="Resource" uid="uid://lr55h8hihhad" path="res://shapes/I_shape.tres" id="4_epimc"]
[ext_resource type="Resource" uid="uid://8t8po8a6djae" path="res://shapes/J_shape.tres" id="5_56hot"]
[ext_resource type="Resource" uid="uid://bbcwtdlg7e82l" path="res://shapes/L_shape.tres" id="6_5c8fc"]
[ext_resource type="Resource" uid="uid://by572sdanx3xg" path="res://shapes/O_shape.tres" id="7_vgcke"]
[ext_resource type="Resource" uid="uid://fbxlkm36x656" path="res://shapes/S_shape.tres" id="8_hge7n"]
[ext_resource type="Resource" uid="uid://l4crsksl7uke" path="res://shapes/T_shape.tres" id="9_0lqb1"]
[ext_resource type="Resource" uid="uid://6dpcryjdcv11" path="res://shapes/Z_shape.tres" id="10_s01nf"]
[ext_resource type="Texture2D" uid="uid://bkjj6by5jl45e" path="res://images/background64.png" id="11_67wtr"]
[ext_resource type="Material" uid="uid://bdpvij3704qou" path="res://shaders/highlight_shader.tres" id="13_epimc"]
[ext_resource type="Texture2D" uid="uid://d1q0hfeujc08o" path="res://images/outlines.png" id="14_56hot"]

[sub_resource type="Resource" id="Resource_6thiv"]
script = ExtResource("2_e5fk4")
width = 50
height = 25
shapes = Array[ExtResource("3_67wtr")]([ExtResource("4_epimc"), ExtResource("5_56hot"), ExtResource("6_5c8fc"), ExtResource("7_vgcke"), ExtResource("8_hge7n"), ExtResource("9_0lqb1"), ExtResource("10_s01nf")])
metadata/_custom_type_script = "uid://bt88jtvvciac4"

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_epimc"]
texture = ExtResource("11_67wtr")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_e5fk4"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_epimc")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5c8fc"]
texture = ExtResource("14_56hot")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0

[sub_resource type="TileSet" id="TileSet_epimc"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_5c8fc")

[sub_resource type="Environment" id="Environment_epimc"]
background_mode = 3
glow_enabled = true

[node name="GameBoard" type="Node2D"]
script = ExtResource("1_xgw2e")
level_data = SubResource("Resource_6thiv")

[node name="BackgroundLayer" type="TileMapLayer" parent="."]
texture_filter = 1
texture_repeat = 1
tile_set = SubResource("TileSet_e5fk4")

[node name="PiecesLayer" type="TileMapLayer" parent="."]
texture_filter = 1
texture_repeat = 1
tile_set = ExtResource("2_onlo0")

[node name="HighlightLayer" type="TileMapLayer" parent="."]
texture_filter = 1
texture_repeat = 1
material = ExtResource("13_epimc")
tile_set = ExtResource("2_onlo0")

[node name="OutlineLayer" type="TileMapLayer" parent="."]
texture_filter = 1
texture_repeat = 1
tile_set = SubResource("TileSet_epimc")

[node name="EffectLayer" type="TileMapLayer" parent="."]
texture_filter = 1
texture_repeat = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_epimc")

[node name="Camera2D" type="Camera2D" parent="."]
